# DBGsplitter_Docker

./: Dockerfile  README.md  install.sh
DBGSplitter/: .gitmodules  CMakeLists.txt  README.md  TODO
DBGSplitter/doc/: pipeline.pptx
DBGSplitter/scripts/differential_analysis/: analyse_diff_eve_cpx.R  run_diff_ana.R
DBGSplitter/scripts/get_repeat_overlapping_nodes_using_ref/: generateRepeateFreeUnitigFile.py  pipeline.sh
DBGSplitter/tests/test_BCS1L/: BCS1L  BCS1L_220-C-mock-R2_GTCCGC_L003_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-mock-R3_GTCCGC_L005_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-mock-R4_ACTGAT_L008_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-mock-R5_ACTGAT_L002_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-virus-R2_GCCAAT_L004_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-virus-R3_CTTGTA_L001_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-virus-R4_CTTGTA_L003_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-C-virus-R5_ACAGTG_L007_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-mock-R2_GCCAAT_L001_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-mock-R3_GCCAAT_L003_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-mock-R4_GTGAAA_L007_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-mock-R5_CTTGTA_L004_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-virus-R2_ACAGTG_L002_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-virus-R3_ACAGTG_L004_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-virus-R4_GTGAAA_L001_Aligned.sortedByCoord.out.bam.fastq  BCS1L_220-U-virus-R5_CTTGTA_L006_Aligned.sortedByCoord.out.bam.fastq
DBGSplitter/tests/test_beta/: readme  test.fa
DBGSplitter/tests/test_map2k2/: MAP2K2  MAP2K2_siCTL1.fastq  MAP2K2_siCTL2.fastq  MAP2K2_sipp1.fastq  MAP2K2_sipp2.fastq
DBGSplitter/tests/tpot_test/: iris_flower_test.py
DBGSplitter/tools/: CMakeLists.txt
DBGSplitter/tools/DBGSplitter/: run_complex_event_pipeline.py
DBGSplitter/tools/DBGSplitter/src/: BoostGraphDefs.h  BoostGraphFilters.h  GraphOutput.h  SolidKmerOracle.h  UnitigCounter.h  Utils.cpp  Utils.h  build_dbg.cpp  build_dbg.hpp  build_gene_components.cpp  build_gene_components.h  differential_analysis.cpp  differential_analysis.h  global.cpp  global.h  identify_nodes_ov_repeats.cpp  identify_nodes_ov_repeats.hpp
DBGSplitter/tools/DBGSplitter/step1/: main.cpp
DBGSplitter/tools/DBGSplitter/step2/: main.cpp
DBGSplitter/tools/DBGSplitter/step3/: main.cpp
DBGSplitter/tools/DBGSplitter/step4/: main.cpp
